--- a/index.html
+++ b/index.html
@@ -3,37 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function Transformations Practice</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Import MathJax for LaTeX rendering -->
+    <title>Math Transformations Practice</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Practice Function Transformations</h1>
-        <p id="transformation-description">Which function represents the given transformation?</p>
-        <ul id="answer-options">
-            <!-- Answer choices will be populated here -->
-        </ul>
-        <button id="next-btn">Next Question</button>
-        <p id="feedback"></p>
-
-        <h2>Score Sheet</h2>
-        <table id="score-sheet">
-            <thead>
-                <tr>
-                    <th>Correct Answer</th>
-                    <th>Points Awarded</th>
-                    <th>Total Score</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Score rows will be added here -->
-            </tbody>
-        </table>
+        <div class="questions-container">
+            <h1>Practice Function Transformations</h1>
+            <div id="transformation-description"></div>
+            <ul id="answer-options"></ul>
+            <div id="feedback"></div>
+            <button id="next-btn">Next Question</button>
+        </div>
+        <div class="score-container">
+            <h2>Score Sheet</h2>
+            <table id="score-sheet">
+                <thead>
+                    <tr>
+                        <th>Correct Answer</th>
+                        <th>Points</th>
+                        <th>Total Score</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
     </div>
-    
     <script src="script.js"></script>
 </body>
 </html>
+
